--- a/LedButton_CordovaAPP/index.html
+++ b/LedButton_CordovaAPP/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
 <!--
-This is an example app that demonstrates how to control an
-RFduino RFD22102 board using BLE (Bluetooth Low Energy).
-
-Please note that this example requires an RFduino RFD22102 plus
-and RFduino RGB LED Button shield (RFD22122). In addition, an
-RFduino USB shield (RFD22121) is needed for programming the
-RFduino from a PC or Mac.
+Tiles Cordova/Evothing demo app
+V.01 Simone Mora 150915
 -->
 <head>
 
