--- a/webClient/index.html
+++ b/webClient/index.html
@@ -22,117 +22,40 @@
 <body>
 <script src="asset/js/browserMqtt.js"></script>
 <script src="asset/js/tileClient.js"></script>
+<script src="modules/ledOn/LedOn.js"></script>
 
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
 <script>
-    status = "off";
 
-    var pubSend = "TileSend";
-    var subRec = "TilesReceive";
+    var led=null;
+    var client=null;
+    $( document ).ready(function() {
+        led=new LedOn("lightButton");
 
-    var client = new TileClient("ws://localhost:3000");
-    //
-  //  while (!client.connect()) {
-    //}
+        var subRec = "TilesReceive";
 
-    client.connect();
+        client = new TileClient("ws://localhost:3000");
 
-    if(client.isConnected())
-        console.log("CONNECTED SUCCESSFUL");
-    else
-        console.log("COULdn't CONNECT");
+        client.connect("#connectStatus");
 
-    client.subscribe("Tiles");
+        client.subscribe("Tiles");
 
-    client.addModule(subRec, receiveMsg);
+        client.addModule(subRec, led.changeDomStatus);
 
+    });
 
-    //var client = mqtt.connect("ws://localhost:3000"); // you add a ws:// url here
-    //console.log(client);
-    /*
-     client.subscribe("Tiles", {qos: 0}, function (err, granted) {
-     console.log("error", err, "granted", granted);
-     });*/
-    /* client.subscribe(subRec, {qos: 0}, function (err, granted) {
-     console.log("error", err, "granted", granted);
-     });
-
-     client.on("message", function (topic, payload) {
-     //console.log("onmessage",topic,payload);
-     // alert([topic, payload].join(": "));
-     //console.log(JSON.parse(payload.payload));
-     console.log("string", payload.toString());
-
-     try {
-     var json = JSON.parse(payload);
-     console.log(json);
-
-     if(topic===subRec)
-     receiveMsg(json);
-     }
-     catch (e) {
-     return false;
-     }
-
-     console.log([topic, payload].join(": "));
-     //client.end();
-     });
-
-     client.publish(subRec, "hello world!");
-
-     */
-    function triggerClick() {
-        // var state = (status) ? "on" : "off";
-        var messageToSend = {
-            id: "CF:5C:40:82:7E:DA",
-            activation: status
-        };
-        console.log("STATUSPre", status);
-        if (status == "on")
-            status = "off";
-        else
-            status = "on";
-        //status=(!status);
-
-        console.log("STATUS", status);
-        console.log("sending", messageToSend);
-
-        if (status == "on")
-            document.getElementById("lightButton").className = "active";
-        else
-            document.getElementById("lightButton").className = "empty";
-
-
-        client.publish(pubSend, messageToSend);
-    }
-
-    function receiveMsg(data) {
-        console.log("changed");
-        //status=(!status);
-        if (status == "on")
-            status = "off";
-        else
-            status = "on";
-
-        if (status == "on")
-            document.getElementById("lightButton").className = "active";
-        else
-            document.getElementById("lightButton").className = "empty";
-
-
-        console.log("STATUS", status);
-        //document.getElementById("btnmsg").innerHTML="status changed";
-//        alert("status changed");
-
-
-    }
+    $(document).on('connected',function(e){
+        document.getElementById("connectStatus").className="active";
+    });
 
 </script>
 <h1>TILES</h1>
 
-<button id="lightButton" onclick="triggerClick()">Click me</button>
+<button id="lightButton" onclick="led.changeStatus('CF:5C:40:82:7E:DA',client)">Click me</button>
 <p id="btnmsg"></p>
+
+<button id="connectStatus">connect status</button>
 
 
 <style>
@@ -142,6 +65,10 @@
 
     #lightButton {
         background-color: red;
+    }
+
+    #connectStatus.active{
+        background-color:green;
     }
 </style>
 </body>
