--- a/Tiles MOBILE/www/index.html
+++ b/Tiles MOBILE/www/index.html
@@ -34,7 +34,13 @@
         <h1 class="title">{{serverConnectStatusMsg}}</h1>
       </div>
       <div class="bar bar-footer bar-stable">
-        <h1 class="title">{{devices.length}} devices found.</h1>
+        <h1 class="title">
+          <ng-pluralize count="devices.length"
+            when="{'0': 'No devices found.',
+            '1': '1 device found.',
+            'other': '{} devices found.'}">
+          </ng-pluralize>
+        </h1>
         <button class="button button-positive" ng-click="doRefresh()">Refresh</button>
       </div>
       <ion-content class="has-header has-subheader">
