Changed folder structure for examples and bundled JS files in client-lib

--- a/Tiles CLOUD/client-lib/examples/browser/hello-world.html
+++ b/Tiles CLOUD/client-lib/examples/browser/hello-world.html
@@ -6,7 +6,7 @@ When the message is received, it will be enclosed in <p> tags and then added to 
 Use developer console to send messages to the server using tilesClient.send([deviceId], [message]).
 -->
 <head>
-	<script src="../browserTilesClient.js"></script>
+	<script src="../../dist/browserTilesClient.js"></script>
 </head>
 <body>
 	<h1>TILES</h1>
