--- a/Tiles CLOUD/client-lib/examples/browser/music-player/dual-music-player.html
+++ b/Tiles CLOUD/client-lib/examples/browser/music-player/dual-music-player.html
@@ -9,7 +9,7 @@ Use developer console to control the music by sending a message to the server:
 tilesClient.send('', '{"type":"button_event", "event":"pressed"}')
 -->
 <head>
-	<script src="../../browserTilesClient.js"></script>
+	<script src="../../../dist/browserTilesClient.js"></script>
 	<link rel="stylesheet" type="text/css" href="play-button.css">
 </head>
 <body>
