--- a/Tiles CLOUD/client-lib/examples/browser/music-player/music-player.html
+++ b/Tiles CLOUD/client-lib/examples/browser/music-player/music-player.html
@@ -2,34 +2,41 @@
 Loads an audio track and connects to the server.
 When a message is received, it's parsed as JSON and evaluated to determine if play() or pause() should be triggered.
 
-The page has no visual representation of the music player.
+The page displays a play/pause icon for a visual representation of the music player.
 
 Use developer console to control the music by sending a message to the server:
 tilesClient.send('', '{"type":"button_event", "event":"pressed"}')
 -->
 <head>
-	<script src="../../browserTilesClient.js"></script>
+	<script src="../../../dist/browserTilesClient.js"></script>
+	<link rel="stylesheet" type="text/css" href="play-button.css">
 </head>
 <body>
 	<h1>TILES Music Player</h1>
+	<span id="playBtn" class="play-button paused" href="#">
+	  <div class="left"></div>
+	  <div class="right"></div>
+	  <div class="triangle-1"></div>
+	  <div class="triangle-2"></div>
+	</span>
 	<script>
+		var playBtn = document.getElementById('playBtn');
+
 		var audio = new Audio('../assets/music.mp3');
 		
 		var tilesClient = new TilesClient('TestUser').connect();
 		
 		tilesClient.on('receive', function(tileId, msg){
 			console.log('Received message from ' + tileId + ': ' + msg);
-			try {
-				var json = JSON.parse(msg);
-				if (json && json.type === 'button_event') {
-					if (json.event === 'pressed'){
-						audio.play();
-					} else {
-						audio.pause();
-					}
+			var json = JSON.parse(msg);
+			if (json && json.type === 'button_event') {
+				if (json.event === 'pressed'){
+					audio.play();
+					playBtn.classList.remove('paused');
+				} else {
+					audio.pause();
+					playBtn.classList.add('paused');
 				}
-			} catch (error) {
-				console.log('Error: ' + error);
 			}
 		});
 		
