Fixes #10. Server details specified at API level.
Added variables for Host and Port where necessary for client libraries.
Each example updated with new usage

--- a/Tiles CLIENTS/js/examples/browser/hello-world.html
+++ b/Tiles CLIENTS/js/examples/browser/hello-world.html
@@ -12,7 +12,7 @@ Use developer console to send messages to the server using tilesClient.send([dev
 	<h1>TILES</h1>
 	<div id="messageContainer"></div>
 	<script>
-		var tilesClient = new TilesClient('TestUser').connect();
+		var tilesClient = new TilesClient('TestUser','test.mosquitto.org','8080').connect();
 		tilesClient.on('receive', function(tileId, msg){
 			console.log('Received message from ' + tileId + ': ' + msg);
 			var paragraph = document.createElement('p');
