--- a/Tiles MOBILE/www/index.html
+++ b/Tiles MOBILE/www/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -24,6 +25,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
   <body ng-app="tiles">
     <ion-pane ng-controller="TilesCtrl">
@@ -55,6 +57,7 @@
             <div class="col">
               <button class="button button-small button-positive" style="float: right;" ng-click="connect(device)" ng-hide="device.connected">Connect</button>
               <button id="disconnectButton" class="button button-small" style="float: right;" ng-click="disconnect(device)" ng-show="device.connected">Disconnect</button>
+              <button id="fetchEventMappingsButton" class="button button-small icon ion-code-download" style="float: right;" ng-click="fetchEventMappings(device)" ng-show="device.connected"></button>
             </div>
             </div>
             <div class="list" ng-show="device.connected">
