--- a/Tiles CLIENTS/js/examples/browser/hello-world.html
+++ b/Tiles CLIENTS/js/examples/browser/hello-world.html
@@ -13,7 +13,8 @@ Use developer console to send messages to the server using tilesClient.send([dev
 	<div id="messageContainer"></div>
 	<script>
 		var tilesClient = new TilesClient('TestUser','test.mosquitto.org','8080').connect();
-		tilesClient.on('receive', function(tileId, msg){
+		tilesClient.on('receive', function(tileId, event){
+			var msg = JSON.stringify(event)
 			console.log('Received message from ' + tileId + ': ' + msg);
 			var paragraph = document.createElement('p');
 			var textnode = document.createTextNode(tileId + ': ' + msg);
