--- a/Tiles CLIENTS/js/examples/browser/music-player/basic-music-player.html
+++ b/Tiles CLIENTS/js/examples/browser/music-player/basic-music-player.html
@@ -17,19 +17,14 @@ tilesClient.send('', '{"type":"button_event", "event":"pressed"}')
 		
 		var tilesClient = new TilesClient('TestUser').connect();
 		
-		tilesClient.on('receive', function(tileId, msg){
-			console.log('Received message from ' + tileId + ': ' + msg);
-			try {
-				var json = JSON.parse(msg);
-				if (json && json.type === 'button_event') {
-					if (json.event === 'pressed'){
-						audio.play();
-					} else {
-						audio.pause();
-					}
+		tilesClient.on('receive', function(tileId, event){
+			console.log('Received message from ' + tileId + ': ' + JSON.stringify(event));
+			if (event.type === 'button_event') {
+				if (event.event === 'pressed'){
+					audio.play();
+				} else {
+					audio.pause();
 				}
-			} catch (error) {
-				console.log('Error: ' + error);
 			}
 		});
 		
