--- a/Tiles MOBILE/www/index.html
+++ b/Tiles MOBILE/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src &apos;self&apos; &apos;unsafe-inline&apos;; script-src &apos;self&apos; &apos;unsafe-inline&apos; &apos;unsafe-eval&apos;">
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -45,15 +45,14 @@
             </ion-nav-buttons>
             <ion-nav-title>Tiles</ion-nav-title>
           </ion-nav-bar>
-          <div class="button bar bar-subheader" ng-class="connectedToServer ? 'bar-balanced' : 'bar-stable'" ng-click="showConnectMQTTPopup()">
+          <div class="button bar bar-subheader" ng-class="connectedToServer ? &apos;bar-balanced&apos; : &apos;bar-stable&apos;" ng-click="showConnectMQTTPopup()">
             <h1 class="title">{{serverConnectStatusMsg}}</h1>
           </div>
           <div class="bar bar-footer bar-stable">
             <h1 class="title">
-              <ng-pluralize count="devices.length"
-                when="{'0': 'No devices found.',
-                '1': '1 device found.',
-                'other': '{} devices found.'}">
+              <ng-pluralize count="devices.length" when="{&apos;0&apos;: &apos;No devices found.&apos;,
+                &apos;1&apos;: &apos;1 device found.&apos;,
+                &apos;other&apos;: &apos;{} devices found.&apos;}">
               </ng-pluralize>
             </h1>
             <button class="button button-positive" ng-click="doRefresh()">Refresh</button>
@@ -65,7 +64,7 @@
               <ion-item ng-repeat="device in devices">
               <div class="row row-center">
                 <div class="col col-75">
-                  <b>{{device.name}}</b><br/>RSSI:{{device.rssi}}<br/>{{device.id}}
+                  <b>{{device.name}}</b><br>RSSI:{{device.rssi}}<br>{{device.id}}
                 </div>
                 <div class="col">
                   <button class="button button-small button-positive" style="float: right;" ng-click="connect(device)" ng-hide="device.connected">Connect</button>
@@ -84,6 +83,6 @@
             </ion-list>
           </ion-content>
         </ion-side-menu-content>
-    </ion-pane>
+    </ion-side-menus></ion-pane>
   </body>
 </html>
