--- a/GATEWAY_2/tilesgateway/src/pages/home/home.html
+++ b/GATEWAY_2/tilesgateway/src/pages/home/home.html
@@ -1,8 +1,20 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
+  <ion-header>
+    <ion-navbar align-title="center">
+      <!-- Toggle left side menu -->
+      <button ion-button icon-only menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+      <ion-title>Tiles</ion-title>
+    </ion-navbar>
+    <ion-toolbar>
+      <!--
+        TODO 
+        this should be a button that triggers the showConnectMQTTPopup()
+        from the old code 
+      -->
+      <ion-title >{{serverConnectStatusMsg}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
 
 <ion-content padding>
   <h2>Welcome to Ionic!</h2>
@@ -15,3 +27,9 @@
     update any existing page or create new pages.
   </p>
 </ion-content>
+
+<!-- 
+  TODO: move the code from the old www/index.html here. 
+  This might require changing some of it where the tags are updated
+  or angular 1 is used. 
+-->
