--- a/GATEWAY_2/tilesgateway/src/pages/home/home.html
+++ b/GATEWAY_2/tilesgateway/src/pages/home/home.html
@@ -23,25 +23,25 @@
         <div class="col col-75">
           <b>{{device.name}}</b><br>RSSI:{{device.rssi}}<br>{{device.id}}
         </div>
-        <!--div class="col">
+        <div class="col">
           <button ion-button small color="positive" style="float: right;" (click)="connect(device)" [hidden]="device.connected">Connect</button>
-          <button id="disconnectButton" ion-button small style="float: right;" (click)="disconnect(device)" [hidden]="!device.connected">Disconnect</button>
-          <button id="fetchEventMappingsButton" ion-button small class="icon ion-code-download" style="float: right;" (click)="fetchEventMappings(device)" [hidden]="!device.connected">
+          <button ion-button small id="disconnectButton" style="float: right;" (click)="disconnect(device)" [hidden]="!device.connected">Disconnect</button>
+          <button ion-button small icon-only id="fetchEventMappingsButton" style="float: right;" (click)="fetchEventMappings(device)" [hidden]="!device.connected">
             <ion-icon name="code-download"></ion-icon>
           </button>
-        </div-->
+        </div>
       </div>
-      <!--ion-list [hidden]="!device.connected">
-        <ion-item name="item-icon-right">Button
-          <ion-badge class="badge-stable" style="right: 16px;" [hidden]="device.buttonPressed">Released</span>
-          <ion-badge class="badge-balanced" style="right: 16px;" [hidden]="!device.buttonPressed">Pressed</span>
+      <ion-list [hidden]="!device.connected">
+        <ion-item name="item-icon-right"> Button
+          <ion-badge badge-stable style="right: 16px;" [hidden]="device.buttonPressed">Released</ion-badge>
+          <ion-badge badge-balanced style="right: 16px;" [hidden]="!device.buttonPressed">Pressed</ion-badge>
         </ion-item>
-        <ion-toggle ng-model="device.ledOn" ng-change="sendData(device)" toggle-class="toggle-calm">LED Light</ion-toggle>
+        <!--ion-toggle ng-model="device.ledOn" ng-change="sendData(device)" toggle-class="toggle-calm">LED Light</ion-toggle>
         <ion-item class="item-icon-right">Name
           <input ng-model="$parent.newName" />
           <button (click)="updateName(device)">Update</button>
-        </ion-item>
-      </ion-list-->
+        </ion-item-->
+      </ion-list>
     </ion-item>
   </ion-list>
 </ion-content>
