Change the connect to server method and add a connect method in the home-component to make it more readable.

--- a/GATEWAY_2/tilesgateway/src/pages/home/home.html
+++ b/GATEWAY_2/tilesgateway/src/pages/home/home.html
@@ -17,7 +17,7 @@
   </ion-header>
 
 <ion-content padding>
-  <button ion-button small icon-only style="float: right;" (click)="mqttClient.connect(tilesApi.hostAddress, tilesApi.mqttPort)">Connect</button>
+  <button ion-button small icon-only style="float: right;" (click)="connect()">Connect</button>
   <ion-list>
     <ion-item *ngFor="let device of devices">
       <div class="row row-center">
