--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -36,8 +36,7 @@
         <div class="col">
           <button ion-button small color="positive" style="float: right;" (click)="bleService.connect(device)" [hidden]="device.connected">Connect</button>
           <button ion-button small id="disconnectButton" style="float: right;" (click)="bleService.disconnect(device)" [hidden]="!device.connected">Disconnect</button>
-          <button ion-button small icon-only id="fetchEventMappingsButton" style="float: right;" (click)="tilesApi.fetchEventMappings(device)" [hidden]="!device.connected">
-            <ion-icon name="code-download"></ion-icon>
+          <button ion-button small icon-only id="fetchEventMappingsButton" style="float: right;" (click)="fetchEventMappings(device)" [hidden]="!device.connected"> FETCH EVT
           </button>
         </div>
       </div>
