--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -13,11 +13,11 @@
         from the old code
       -->
       <ion-title >{{serverConnectStatusMsg}}</ion-title>
-      <button ion-button small icon-only style="float: right;" (click)="connectToServer()">Connect</button>
+      <button ion-button small style="float: right;" (click)="connectToServer()">Connect</button>
     </ion-toolbar>
   </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-refresher (ionRefresh)="refreshDevices($event)">
     <ion-refresher-content
       pullingIcon="arrow-dropdown"
@@ -27,29 +27,29 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-item>{{statusMsg}}</ion-item>
-  <ion-list>
-    <ion-item *ngFor="let device of devices">
+  <ion-list padding>
+    <ion-item margin-bottom="3px" color="light" *ngFor="let device of devices">
       <div class="row row-center">
         <div class="col col-75">
-          <b>{{device.name}}</b><br>RSSI:{{device.rssi}}<br>{{device.id}}
+          <b>{{device.name}}</b><br>ID: {{device.id}}
         </div>
         <div class="col">
           <button ion-button small color="positive" style="float: right;" (click)="bleService.connect(device)" [hidden]="device.connected">Connect</button>
           <button ion-button small id="disconnectButton" style="float: right;" (click)="bleService.disconnect(device)" [hidden]="!device.connected">Disconnect</button>
-          <button ion-button small icon-only id="fetchEventMappingsButton" style="float: right;" (click)="fetchEventMappings(device)" [hidden]="!device.connected"> FETCH EVT
+          <button ion-button small id="fetchEventMappingsButton" style="float: right;" (click)="fetchEventMappings(device)" [hidden]="!device.connected"> FETCH EVT
           </button>
         </div>
       </div>
-      <ion-list [hidden]="!device.connected">
-        <ion-item name="item-icon-right"> Button
+      <ion-list [hidden]="!device.connected" no-lines>
+        <ion-item color="light" name="item-icon-right">Button
           <ion-badge badge-stable style="right: 16px;" [hidden]="device.buttonPressed">Released</ion-badge>
           <ion-badge badge-balanced style="right: 16px;" [hidden]="!device.buttonPressed">Pressed</ion-badge>
         </ion-item>
-        <ion-item>
+        <ion-item color="light">
           <!--ion-label>LED Light </ion-label-->
           <ion-toggle [(ngModel)]="device.ledOn" (ionChange)="bleService.sendData(device, 'led,on,red')"></ion-toggle>
         </ion-item>
-        <ion-item class="item-icon-right">
+        <ion-item color="light" class="item-icon-right">
           <button ion-button small color="positive" (click)="changeNamePop(device)">Update name</button>
         </ion-item>
       </ion-list>
