--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -32,7 +32,7 @@
     <ion-item class="devices" color="light" *ngFor="let device of devices">
       <div class="row row-center">
         <div class="col col-75">
-          <b>{{device.name}}</b><br>ID: {{device.id}}
+          <b>{{device.name}}</b><br>ID: {{device.tileId}}
         </div>
         <div class="col">
           <button class="bttn" ion-button small color="positive" (click)="bleService.connect(device)" [hidden]="device.connected">Connect</button>
