Add a reset name button that resets the custom name to the ble-name

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -52,6 +52,7 @@
           </div>
           <div class="col">
             <button class="bttn" ion-button small color="positive" (click)="changeNamePop(device)">Rename Tile</button>
+            <button class="bttn" ion-button small color="positive" (click)="devicesService.resetName(device)" [hidden]="!device.connected">Reset name</button>
           </div>
         </div>
       </ion-list>
