change px to em and a lot of fuckaru

--- a/GATEWAY/src/pages/home/home.html
+++ b/GATEWAY/src/pages/home/home.html
@@ -7,7 +7,7 @@
       <ion-title>Tiles</ion-title>
     </ion-navbar>
     <ion-toolbar>
-      <ion-title style="padding: 0;" left>{{serverConnectStatusMsg}}
+      <ion-title left style="padding-left: 0;">{{serverConnectStatusMsg}}
         <button right class="titleBttn" ion-button small color="positive" (click)="connectToServer()">CONNECT</button>
       </ion-title>
     </ion-toolbar>
